# NeneCppMinimumTemplate

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md  main.cpp
